TF-34 Added an imageservice that should handle the uploading and downloading of the images stored in the azure storage blobs. (images currently don't work)

--- a/FowlerSite/Views/Games/Details.cshtml
+++ b/FowlerSite/Views/Games/Details.cshtml
@@ -7,7 +7,7 @@
 
 <body class="DetailsBody">
     <h1 class="stuff">Details</h1>
-    <img src="@Url.Content(Model.imagePath)" class="img-thumbnail float-right col-lg-6 col-md-12 col-sm-12" />
+    <img src="@Url.Content(Model.ImagePath)" class="img-thumbnail float-right col-lg-6 col-md-12 col-sm-12" />
     <div>
         <h4>Game</h4>
         <hr />
