--- a/FowlerSite/Views/Games/Filter.cshtml
+++ b/FowlerSite/Views/Games/Filter.cshtml
@@ -134,7 +134,7 @@
                         {
                             <tr>
                                 <td>
-                                    <img src="@Url.Content(item.imagePath)" class="img-thumbnail" />
+                                    <img src="@Url.Content(item.ImagePath)" class="img-thumbnail" />
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
