--- a/FowlerSite/Views/Games/Create.cshtml
+++ b/FowlerSite/Views/Games/Create.cshtml
@@ -39,6 +39,11 @@
                 <span asp-validation-for="Platforms" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ImagePath" class="control-label"></label>
+                <input asp-for="ImagePath" type="file" class="form-control"/>
+                <span asp-validation-for="ImagePath" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
