fixed the login for admins

--- a/FowlerSite/Views/Login/Login.cshtml
+++ b/FowlerSite/Views/Login/Login.cshtml
@@ -4,6 +4,11 @@
 <head>
     <link href="~/assets/css/login.css" rel="stylesheet" />
 </head>
+<style type="text/css">
+    .error{
+        color: red;
+    }
+</style>
 <body>
     <div class="flex-container">
         <div class="content-container">
