--- a/FowlerSite/Views/Login/Users/User.cshtml
+++ b/FowlerSite/Views/Login/Users/User.cshtml
@@ -43,3 +43,9 @@
         </tr>
     </tbody>
 </table>
+
+<div class="col-11">
+    <div class="list">
+        @await Html.PartialAsync("~/Views/Shared/_Order.cshtml", Model)
+    </div>
+</div>
