--- a/FowlerSite/Views/Shared/_OrderLine.cshtml
+++ b/FowlerSite/Views/Shared/_OrderLine.cshtml
@@ -1,13 +1,41 @@
-﻿<!DOCTYPE html>
+﻿@model DataAccessLibrary.Models.Order
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-</head>
-<body>
-    <div>
-        @RenderBody()
+<header>Orders</header>
+<div class="row">
+    <div class="col text-left">
+        <a class="btn btn-sm btn-primary" asp-controller="OrderLine" asp-action="Create">Create New</a>
     </div>
-</body>
-</html>
+    <div class="col text-right">
+        <h4>OrderLine count: @Model.Lines.Count()</h4>
+    </div>
+</div>
+<table class="table table-bordered table-sm table-striped">
+    <thead>
+        <tr>
+            <th class="text-primary">Product Name</th>
+            <th class="text-primary">Price</th>
+            <th class="text-primary">Total</th>
+            <th class="text-primary">SubTotal</th>
+            <th class="text-primary">Payment Type</th>
+        </tr>
+    </thead>
+    <tbody>
+        @if (Model == null)
+        {
+            <tr><td colspan="6" class="text-center">No OrderLine Data</td></tr>
+        }
+        else
+        {
+            @foreach (var o in Model.Lines)
+            {
+                <tr>
+                    <td>@o.Game</td>
+                    <td>@o.Game.Price</td>
+                    <td>@o.Total</td>
+                    <td>@o.Sub_Total</td>
+                    <td>@o.PaymentType</td>
+                </tr>
+            }
+        }
+    </tbody>
+</table>
