TF-34 Worked out a bug that was preventing the images to load in from blob storage. Removed an image from local sotrage for testing purposes.

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                 @foreach (var g in Model)
                 {
                     <div class="nk-image-slider-item">
-                        <img src="@Url.Content(g.ImagePath)" alt="" class="nk-image-slider-img" data-thumb="@Url.Content(g.ImagePath)">
+                        <img src="@g.ImagePath" alt="" class="nk-image-slider-img" data-thumb="@Url.Content(g.ImagePath)">
 
                         <div class="nk-image-slider-content">
 
