You can now create admins and proper information is displayed, messed with some things for UX on TF-20

--- a/FowlerSite/Views/Login/CreateAdmin.cshtml
+++ b/FowlerSite/Views/Login/CreateAdmin.cshtml
@@ -8,9 +8,9 @@
     <div class="flex-container">
         <div class="content-container">
             <div class="form-container">
-                <form method="post" asp-controller="Users" asp-action="CreateUser">
+                <form method="post" asp-controller="Users" asp-action="CreateAdmin">
                     <h1>
-                        Create an Account:
+                        Create Admin Account:
                     </h1>
                     <br>
                     <br>
