--- a/FowlerSite/Views/Login/Admin.cshtml
+++ b/FowlerSite/Views/Login/Admin.cshtml
@@ -13,24 +13,30 @@
     <tbody>
         <tr>
             <th>You Are Logged in as Admin:</th>
+            <th>Would you like to:</th>
         </tr>
         <tr>
             <td>@Model.Username</td>
+            <td><a class="btn btn-outline-primary" asp-action="CreateAdmin">Create an Admin</a></td>
         </tr>
     </tbody>
 </table>
 <table class="nk-table">
     <thead>
         <tr>
-            <th colspan="3">Create an Admin</th>
+            <th colspan="3">Users</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <th>Would you like to:</th>
+            <th>Username:</th>
+            <th>Password:</th>
+            <th>First Name:</th>
+            <th>Last Name:</th>
+            <th>Email:</th>
         </tr>
         <tr>
-            <td><a class="btn btn-outline-primary" asp-action="CreateAdmin">Create an Admin</a></td>
+            @Html.Action("GetUsers")
         </tr>
     </tbody>
 </table>
