--- a/FowlerSite/Views/Login/Admin.cshtml
+++ b/FowlerSite/Views/Login/Admin.cshtml
@@ -1,4 +1,4 @@
-﻿@model Users
+﻿@model Login
 
 <!DOCTYPE html>
 <head>
@@ -35,8 +35,47 @@
             <th>Last Name:</th>
             <th>Email:</th>
         </tr>
+            @foreach (var u in Model.Users)
+            {
+                @if (u.Admin == 0)
+                {
+                    <tr>
+                        <td>@u.Username</td>
+                        <td>@u.Password</td>
+                        <td>@u.FirstName</td>
+                        <td>@u.LastName</td>
+                        <td>@u.EmailAddress</td>
+                    </tr>
+                }
+            }
+    </tbody>
+</table>
+<table class="nk-table">
+    <thead>
         <tr>
-            @Html.Action("GetUsers")
+            <th colspan="3">Admins</th>
         </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Username:</th>
+            <th>Password:</th>
+            <th>First Name:</th>
+            <th>Last Name:</th>
+            <th>Email:</th>
+        </tr>
+            @foreach (var u in Model.Users)
+            {
+                @if (u.Admin == 1)
+                {
+                    <tr>
+                    <td>@u.Username</td>
+                    <td>@u.Password</td>
+                    <td>@u.FirstName</td>
+                    <td>@u.LastName</td>
+                    <td>@u.EmailAddress</td>
+                    </tr>
+                }
+            }
     </tbody>
 </table>
