--- a/FowlerSite/Views/Login/Admin.cshtml
+++ b/FowlerSite/Views/Login/Admin.cshtml
@@ -24,7 +24,7 @@
 <table class="nk-table">
     <thead>
         <tr>
-            <th colspan="3">Users</th>
+            <th colspan="4">Users</th>
         </tr>
     </thead>
     <tbody>
@@ -34,6 +34,8 @@
             <th>First Name:</th>
             <th>Last Name:</th>
             <th>Email:</th>
+            <th>Edit:</th>
+            <th>Delete:</th>
         </tr>
             @foreach (var u in Model.Users)
             {
@@ -45,6 +47,12 @@
                         <td>@u.FirstName</td>
                         <td>@u.LastName</td>
                         <td>@u.EmailAddress</td>
+                        <td><a class="btn btn-outline-primary" asp-action="Update" asp-route-id="@u.Id">Edit User</a></td>
+                        <td>
+                            <form asp-controller="Users" asp-action="Delete" method="post" asp-route-id="@u.Id">
+                                <button class="btn btn-outline-danger">Delete</button>
+                            </form>
+                        </td>
                     </tr>
                 }
             }
@@ -63,17 +71,25 @@
             <th>First Name:</th>
             <th>Last Name:</th>
             <th>Email:</th>
+            <th>Edit:</th>
+            <th>Delete:</th>
         </tr>
             @foreach (var u in Model.Users)
             {
                 @if (u.Admin == 1)
                 {
                     <tr>
-                    <td>@u.Username</td>
-                    <td>@u.Password</td>
-                    <td>@u.FirstName</td>
-                    <td>@u.LastName</td>
-                    <td>@u.EmailAddress</td>
+                        <td>@u.Username</td>
+                        <td>@u.Password</td>
+                        <td>@u.FirstName</td>
+                        <td>@u.LastName</td>
+                        <td>@u.EmailAddress</td>
+                        <td><a class="btn btn-outline-primary" asp-controller="Users" asp-action="Update" asp-route-id="@u.Id">Edit User</a></td>
+                        <td>
+                            <form asp-controller="Users" asp-action="Delete" method="post" asp-route-id="@u.Id">
+                                <button class="btn btn-outline-danger">Delete</button>
+                            </form>
+                        </td>
                     </tr>
                 }
             }
