TF-17 Transactions appear on user pages but the modal isn't functional will revisit tomrrow.

--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/css/parsley.css">
 
+    <!--PaperKit-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/assets/css/paper-kit.css" />
+    <link rel="stylesheet" href="~/assets/css/demo.css" />
+
     <!-- FontAwesome -->
     <script defer src="~/assets/vendor/fontawesome-free/js/all.js"></script>
     <script defer src="~/assets/vendor/fontawesome-free/js/v4-shims.js"></script>
@@ -152,6 +158,13 @@
 
         <!-- END: Login Modal -->
         <!-- START: Scripts -->
+        <!-- Paper Kit Assets-->
+        <script src="~/assets/js/paper-kit.js"></script>
+        <script src="~/assets/js/plugins/bootstrap-switch.js"></script>
+        <script src="~/assets/js/plugins/bootstrap-datepicker.js"></script>
+        <script src="~/assets/js/plugins/nouislider.min.js"></script>
+        <script src="~/assets/js/plugins/moment.min.js"></script>
+
         <!-- Object Fit Polyfill -->
         <script src="~/assets/vendor/object-fit-images/dist/ofi.min.js"></script>
 
