You can now edit and delete users as an admin

--- a/FowlerSite/Views/Login/Update.cshtml
+++ b/FowlerSite/Views/Login/Update.cshtml
@@ -16,7 +16,7 @@
             <h4 class="mb-0"><span class="text-main-1">Edit User</span></h4>
 
             <div class="nk-gap-1"></div>
-            <form asp-action="Update" asp-controller="Users" method="post" class="nk-form text-white">
+            <form asp-action="Update" asp-controller="Login" method="post" class="nk-form text-white">
                 <div class="row vertical-gap">
                     <div class="col-md-6">
                         First Name:
