--- a/FowlerSite/Views/Login/Admin.cshtml
+++ b/FowlerSite/Views/Login/Admin.cshtml
@@ -24,7 +24,7 @@
 <table class="nk-table">
     <thead>
         <tr>
-            <th colspan="4">Users</th>
+            <th colspan="3">Users</th>
         </tr>
     </thead>
     <tbody>
@@ -49,7 +49,7 @@
                         <td>@u.EmailAddress</td>
                         <td><a class="btn btn-outline-primary" asp-action="Update" asp-route-id="@u.Id">Edit User</a></td>
                         <td>
-                            <form asp-controller="Users" asp-action="Delete" method="post" asp-route-id="@u.Id">
+                            <form asp-action="Delete" method="post" asp-route-id="@u.Id">
                                 <button class="btn btn-outline-danger">Delete</button>
                             </form>
                         </td>
