tf-36. The cart now clears after submission. Also added a confirmation message and redirected the checkout back to the store cart.

--- a/FowlerSite/Views/Store/OrderSuccess.cshtml
+++ b/FowlerSite/Views/Store/OrderSuccess.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
-    ViewBag.Title = "OrderSuccess";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    string message = TempData["Message"] as string;
+    if (!String.IsNullOrEmpty(message))
+    {
+        <div class="message">
+            <h4>@message</h4>
+        </div>
+    }
 }
-
-<h4>Your order has been placed.</h4>
