TF-39 Minor changes to clean up a few issues after merging. Removed the footer from the login page, was causing display issues. Aligned the page nav to the right after removing some un-used links.

--- a/FowlerSite/Views/Login/Login.cshtml
+++ b/FowlerSite/Views/Login/Login.cshtml
@@ -12,9 +12,17 @@
     .error {
         color: red;
     }
+
+    .nk-page-background-bottom {
+        display: none;
+    }
+
+    footer {
+        display: none;
+    }
 </style>
 
-<div class="form-container mx-auto my-100">
+<div class="form-container mx-auto mt-100">
     <h4 class="my-2"><span class="text-main-1">Sign</span> In</h4>
 
     <form asp-action="UserLogin" method="post" class="nk-form text-white">
