--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                         <img src="~/assets/images/logo.png" alt="GoodGames" width="199">
                     </a>
 
-                    <ul class="nk-nav nk-nav-center d-none d-md-table-cell" data-nav-mobile="#nk-nav-mobile">
+                    <ul class="nk-nav nk-nav-right d-none d-md-table-cell" data-nav-mobile="#nk-nav-mobile">
 
                         <li class=" nk-drop-item">
                             <a asp-controller="Home" asp-action="Index">Home</a>
