--- a/FowlerSite/Views/Login/Admin.cshtml
+++ b/FowlerSite/Views/Login/Admin.cshtml
@@ -30,7 +30,7 @@
 <table class="nk-table m-10">
     <thead>
         <tr>
-            <th colspan="7">Users</th>
+            <th colspan="8">Users</th>
         </tr>
     </thead>
     <tbody>
@@ -42,6 +42,7 @@
             <th>Email:</th>
             <th>Edit:</th>
             <th>Delete:</th>
+            <th>Upgrade:</th>
         </tr>
         @foreach (var u in Model.Users)
         {
